--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "hoek": "^6.1.3"
+  },
   "devDependencies": {
     "body-parser": "1.18.2",
     "chalk": "^2.0.0",
@@ -14,7 +16,7 @@
     "cors": "2.8.4",
     "express": "^4.16.1",
     "jsonwebtoken": "7.4.3",
-    "morgan": "1.9.0",
+    "morgan": "^1.9.0",
     "uuid": "^3.3.2"
   }
 }
