--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server"
   },
   "dependencies": {
-    "hoek": "^6.1.3"
+    "hoek": "^6.1.3",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "body-parser": "1.18.2",
